api-gateway.yml

apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: sweetify
spec:
  ports:
    - port: 8080
  selector:
    app: api-gateway

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: sweetify
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
        - name: api-gateway
          image: frcalderon/sweetify-api-gateway
          imagePullPolicy: Always
