db-stock.yml

apiVersion: v1
kind: Service
metadata:
  name: stock-db
  namespace: sweetify
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: stock-db

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stock-db
  namespace: sweetify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stock-db
  template:
    metadata:
      labels:
        app: stock-db
    spec:
      containers:
        - name: stock-db
          image: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgres/data
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: stock-db-persistent-volume-claim
