keycloak.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: sweetify
spec:
  ports:
    - port: 8080
  selector:
    app: keycloak

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: sweetify
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:21.0.1
        args: ["start-dev"]
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
