ms-commands.yml

apiVersion: v1
kind: Service
metadata:
  name: ms-commands
  namespace: sweetify
spec:
  ports:
    - port: 8080
  selector:
    app: ms-commands

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-commands
  namespace: sweetify
  labels:
    app: ms-commands
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-commands
  template:
    metadata:
      labels:
        app: ms-commands
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
        - name: ms-commands
          image: frcalderon/sweetify-ms-commands
          imagePullPolicy: Always
