ms-products.yml

apiVersion: v1
kind: Service
metadata:
  name: ms-products
  namespace: sweetify
spec:
  ports:
    - port: 8080
  selector:
    app: ms-products

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-products
  namespace: sweetify
  labels:
    app: ms-products
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-products
  template:
    metadata:
      labels:
        app: ms-products
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
        - name: ms-products
          image: frcalderon/sweetify-ms-products
          imagePullPolicy: Always
