ms-stock.yml

apiVersion: v1
kind: Service
metadata:
  name: ms-stock
  namespace: sweetify
spec:
  ports:
    - port: 8080
  selector:
    app: ms-stock

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-stock
  namespace: sweetify
  labels:
    app: ms-stock
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-stock
  template:
    metadata:
      labels:
        app: ms-stock
    spec:
      serviceAccountName: spring-cloud-kubernetes
      containers:
        - name: ms-stock
          image: frcalderon/sweetify-ms-stock
          imagePullPolicy: Always
