ingress-controller.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sweetify-ingress
  namespace: sweetify
spec:
  ingressClassName: nginx
  rules:
    - host: api.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
    - host: auth.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
    - host: discovery.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: discovery-server
                port:
                  number: 8761
    - host: config.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: configuration-server
                port:
                  number: 8888
    - host: products.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-products
                port:
                  number: 8080
    - host: commands.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-commands
                port:
                  number: 8080
    - host: stock.sweetify.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-stock
                port:
                  number: 8080
